# CCSC-CTF-2024

./: .gitignore  README.md
.github/workflows/: build.yml  ctfd.yml  lint.yml  pipeline.yml  readme.yml
crypto/Identity_Thief/: challenge.yml
crypto/andromeda-cloud-storage/: README.md  challenge.yml  docker-compose.yml
crypto/andromeda-cloud-storage-v2/: README.md  challenge.yml  docker-compose.yml
crypto/identity-thief/: README.md  challenge.yml
crypto/inverted-oracle/: README.md  challenge.yml  docker-compose.yml
crypto/inverted-oracle/setup/: Dockerfile  banner.py  challenge.py  pyproject.toml  secret.py
forensics/HIDden-1/: README.md  challenge.yml
forensics/HIDden-2/: README.md  challenge.yml
forensics/HIDden-3/: challenge.yml
forensics/asteroid_wars/: README.md  challenge.yml
forensics/attachment/: README.md  challenge.yml
forensics/forensic_trace_process/: README.md  challenge.yml
forensics/galactic-connection/: README.md  challenge.yml
forensics/hidden-horizons/: README.md  challenge.yml
forensics/orion-lsassault/: README.md  challenge.yml
forensics/underground_watch_part_2/: README.md  challenge.yml  docker-compose.yml
misc/armored-up/: README.md  challenge.yml  docker-compose.yml
misc/metadata-matters/: README.md  challenge.yml
misc/password-keep/: README.md  challenge.yml
misc/superguesser/: README.md  challenge.yml  docker-compose.yml
misc/superguesser_2/: README.md  challenge.yml  docker-compose.yml
misc/superguesser_3/: README.md  challenge.yml  docker-compose.yml
misc/welcome_to_ccsc24/: README.md  challenge.yml
(+249 files in other folders)
